--- a/css/all.css
+++ b/css/all.css
@@ -450,4 +450,33 @@ textarea:focus {
   background: url("../image/phone.png") -13px 0px no-repeat;
 }
 
+.gmap {
+  height: 469px;
+  /*&_info{
+    width: 280px;
+    height: 170px;
+  }*/
+}
+.gmap_title {
+  text-transform: uppercase;
+  font-size: 30px;
+  border-left: 3px solid #ffffff;
+  padding-left: 19px;
+  margin: 30px 0px 0px 35px;
+  color: #ffffff;
+}
+.gmap_text {
+  margin: 27px 0px 0px 58px;
+}
+.gmap_text p {
+  margin-bottom: 7px;
+  font-size: 18px;
+  color: #ffffff;
+}
+
+.yamap {
+  height: 469px;
+  width: 100%;
+}
+
 /*# sourceMappingURL=all.css.map */
