--- a/sass/_topmenu.scss
+++ b/sass/_topmenu.scss
@@ -18,14 +18,16 @@
     visibility: hidden;
     @include def-opacity(0.5);
     @include def-transition(all, 0.2s);
+    @include old-ie{
+      visibility: visible;
+      display: none;
+    }
   }
   &_list{
-  	//padding: 0px 20px 0px 20px;
     display: table;
     width: 100%;
     &__l2{   
       width: 1000px;
-      //padding: 0px 0px 0px 20px;
       margin: 0 auto;    
     }
   }
@@ -55,6 +57,9 @@
         max-height: 200px;
         padding: 27px 0px 45px 0px;
         @include def-opacity(1);
+        @include old-ie{
+          display: block;
+        }
       }
       .topmenu_link{
       	border-top: 3px solid #3498db;
