--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -2,10 +2,14 @@
 $bold: proximanova_bold;
 $light: proximanova_light;
 $italic: proximanova_italic;
+$min_width: 1000px;
 $font_size18: 18px;
+$font_size20: 20px;
 $font_size14: 14px;
 $font_size13: 13px;
+$font_size12: 12px;
 $font_size16: 16px;
+$font_size_h1: 38px;
 @import "mymix";
 @import "fonts";
 //**********************************************************/
@@ -67,6 +71,8 @@ textarea{
 }
 //**********************************************************/
 //**********************************************************/
+@import "title";
+
 @import "button";
 @import "header";
 @import "container";
@@ -74,5 +80,8 @@ textarea{
 @import "logo";
 @import "address";
 
+@import "footer";
 @import "gmap";
 @import "yamap";
+@import "social";
+@import "dev";
