--- a/css/all-old-ie.css
+++ b/css/all-old-ie.css
@@ -111,6 +111,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 body {
   font-family: proximanova;
   font-size: 18px;
+  min-width: 1000px;
 }
 
 strong, b {
@@ -125,6 +126,21 @@ i {
   font-family: proximanova_light;
 }
 
+a {
+  color: #373737;
+}
+a:visited {
+  color: #373737;
+}
+a:hover {
+  color: #373737;
+}
+a:active {
+  color: #373737;
+}
+a:focus {
+  color: #373737;
+}
 a:focus {
   outline: none;
 }
@@ -318,7 +334,7 @@ textarea:focus {
   position: relative;
 }
 .header_bottom {
-  display: inline-table;
+  display: inline-block;
   /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
   * zoom: 1;
   display: block;
@@ -341,8 +357,6 @@ textarea:focus {
 
 .container {
   width: 960px;
-  min-width: 960px;
-  padding: 0px 20px 0px 20px;
   margin: 0 auto;
   *width: 965px;
 }
@@ -533,7 +547,7 @@ textarea:focus {
 }
 
 .address {
-  display: inline-table;
+  display: inline-block;
   /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
   * zoom: 1;
   display: block;
@@ -617,7 +631,7 @@ textarea:focus {
   height: 405px;
   position: absolute;
   top: -43px;
-  right: 20px;
+  right: 0px;
 }
 .form-discount_wrap {
   position: relative;
@@ -690,7 +704,7 @@ textarea:focus {
   height: 176px;
   position: absolute;
   top: 186px;
-  right: 320px;
+  right: 300px;
   background-color: #3498db;
 }
 .main-descr_title {
@@ -736,7 +750,7 @@ textarea:focus {
   margin: 0px 0px 44px 0px;
 }
 .main1_wrap {
-  display: inline-table;
+  display: inline-block;
   /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
   * zoom: 1;
   display: block;
@@ -804,9 +818,15 @@ textarea:focus {
   padding: 0px 0px 0px 15px;
   margin: 0px 0px 0px 20px;
 }
+.main2_descr {
+  margin: 0px 0px 37px 0px;
+}
 
+.calc-tax {
+  margin: 0px 0px 41px 0px;
+}
 .calc-tax_wrap {
-  display: inline-table;
+  display: inline-block;
   /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
   * zoom: 1;
   display: block;
@@ -845,6 +865,13 @@ textarea:focus {
   -o-transition: border-color 0.2s ease-in-out;
   -ms-transition: border-color 0.2s ease-in-out;
   transition: border-color 0.2s ease-in-out;
+  background-color: #ffffff;
+}
+.calc-tax input[type="radio"] + label:hover {
+  border-color: #3498db;
+}
+.calc-tax input[type="radio"] + label:hover:before {
+  background-color: #3498db;
 }
 .calc-tax input[type="radio"] + label::before {
   content: "";
@@ -855,12 +882,7 @@ textarea:focus {
   top: 0px;
   left: 0px;
   background-color: #7f7f7f;
-  background-position: 100% 100%;
-  -webkit-transition: background-position 0.2s ease-in-out;
-  -moz-transition: background-position 0.2s ease-in-out;
-  -o-transition: background-position 0.2s ease-in-out;
-  -ms-transition: background-position 0.2s ease-in-out;
-  transition: background-position 0.2s ease-in-out;
+  background-position: 46% -46%;
 }
 .calc-tax input[type="radio"]:checked + label {
   border-color: #3498db;
@@ -868,13 +890,497 @@ textarea:focus {
 .calc-tax input[type="radio"]:checked + label::before {
   background: url("../image/calc-check.png") no-repeat 46% 46% #3498db;
 }
+.calc-tax_head {
+  font-family: proximanova_bold;
+  color: #373737;
+  font-size: 16px;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 0px 0px 19px 0px;
+}
+.calc-tax_title {
+  color: #373737;
+  font-size: 18px;
+  margin: 17px 0px 6px 0px;
+  padding: 0px 10px 0px 60px;
+}
+.calc-tax_descr {
+  font-family: proximanova_light;
+  color: #373737;
+  font-size: 14px;
+  padding: 0px 10px 0px 60px;
+}
+.calc-tax_lines {
+  display: inline-block;
+  /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
+  * zoom: 1;
+  display: block;
+  width: 668px;
+  margin: 0 auto;
+  height: 26px;
+  border-top: 3px solid #7f7f7f;
+}
+.calc-tax_lines:after {
+  clear: both;
+  content: ".";
+  display: block;
+  height: 0;
+  font-size: 0;
+  line-height: 0;
+  visibility: hidden;
+}
+* html .calc-tax_lines {
+  height: 1%;
+}
+.calc-tax_left {
+  width: 329px;
+  height: 100%;
+  float: left;
+  border-left: 3px solid #7f7f7f;
+  border-right: 2px solid #7f7f7f;
+}
+.calc-tax_right {
+  width: 330px;
+  height: 100%;
+  float: left;
+  border-right: 3px solid #7f7f7f;
+  border-left: 1px solid #7f7f7f;
+}
+
+.calc-extra {
+  margin: 0px 0px 40px 0px;
+}
+.calc-extra_wrap {
+  display: inline-block;
+  /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
+  * zoom: 1;
+  display: block;
+}
+.calc-extra_wrap:after {
+  clear: both;
+  content: ".";
+  display: block;
+  height: 0;
+  font-size: 0;
+  line-height: 0;
+  visibility: hidden;
+}
+* html .calc-extra_wrap {
+  height: 1%;
+}
+.calc-extra_item {
+  float: left;
+  width: 50%;
+  text-align: center;
+}
+.calc-extra_title {
+  font-family: proximanova_bold;
+  font-size: 16px;
+  color: #ffffff;
+  text-align: center;
+  text-transform: uppercase;
+  height: 34px;
+  padding: 16px 0px 0px 0px;
+  margin: 0px 0px 32px 0px;
+  background-color: #19254b;
+  position: relative;
+}
+.calc-extra_title:before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  bottom: -10px;
+  left: 223px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 13px 18px 0 18px;
+  border-color: #19254b transparent transparent transparent;
+}
+.calc-extra_title__left {
+  border-right: 1px solid #ffffff;
+}
+.calc-extra_title__right {
+  border-left: 1px solid #ffffff;
+}
+.calc-extra_link {
+  font-size: 16px;
+  line-height: 1;
+}
+.calc-extra_link:hover {
+  text-decoration: none;
+}
+
+.calc-slider_title {
+  text-align: center;
+  margin: 0px 0px 46px 0px;
+}
+.calc-slider_title span {
+  display: inline-block;
+  height: 31px;
+  font-size: 18px;
+  color: #ffffff;
+  background-color: #3498db;
+  padding: 9px 18px 0px 18px;
+  position: relative;
+}
+.calc-slider_title span:before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  bottom: -20px;
+  left: 44%;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 22px 28px 0 28px;
+  border-color: #3498db transparent transparent transparent;
+}
+.calc-slider_slider {
+  padding: 0px 0px 0px 68px;
+  margin: 9px 0px 8px 0px;
+}
+.calc-slider_curent {
+  float: right;
+  width: 150px;
+}
+.calc-slider_curent input {
+  display: block;
+  padding: 0px;
+  margin: 0px;
+  border: none;
+  background-color: #495662;
+  color: #fefefe;
+  font-size: 20px;
+  line-height: 1;
+  width: 79px;
+  height: 26px;
+  text-align: center;
+}
+.calc-slider_main {
+  width: 700px;
+}
+.calc-slider_rules {
+  display: inline-block;
+  /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
+  * zoom: 1;
+  display: block;
+  padding: 0 0 0 68px;
+}
+.calc-slider_rules:after {
+  clear: both;
+  content: ".";
+  display: block;
+  height: 0;
+  font-size: 0;
+  line-height: 0;
+  visibility: hidden;
+}
+* html .calc-slider_rules {
+  height: 1%;
+}
+.calc-slider_rule1 {
+  float: left;
+  width: 170px;
+  height: 10px;
+  border-left: 1px solid #4d5a66;
+}
+.calc-slider_rule1__num {
+  position: relative;
+}
+.calc-slider_rule1__num:before {
+  content: "10";
+  font-size: 20px;
+  color: #373737;
+  display: inline-block;
+  position: absolute;
+  bottom: -27px;
+  left: -8px;
+}
+.calc-slider_rule2 {
+  float: left;
+  width: 77px;
+  height: 10px;
+  border-left: 1px solid #4d5a66;
+}
+.calc-slider_rule2__num {
+  position: relative;
+}
+.calc-slider_rule2__num:before {
+  content: "50";
+  font-size: 20px;
+  color: #373737;
+  display: inline-block;
+  position: absolute;
+  bottom: -27px;
+  left: -13px;
+}
+.calc-slider_rule3 {
+  float: left;
+  width: 92px;
+  height: 10px;
+  border-left: 1px solid #4d5a66;
+}
+.calc-slider_rule3__num {
+  position: relative;
+}
+.calc-slider_rule3__num:before {
+  content: "100";
+  font-size: 20px;
+  color: #373737;
+  display: inline-block;
+  position: absolute;
+  bottom: -27px;
+  left: -16px;
+}
+.calc-slider_rule4 {
+  float: left;
+  width: 158px;
+  height: 10px;
+  border-left: 1px solid #4d5a66;
+}
+.calc-slider_rule4__num {
+  position: relative;
+}
+.calc-slider_rule4__num:before {
+  content: "200";
+  font-size: 20px;
+  color: #373737;
+  display: inline-block;
+  position: absolute;
+  bottom: -27px;
+  left: -18px;
+}
+.calc-slider_rule5 {
+  float: left;
+  width: 95px;
+  height: 10px;
+  border-left: 1px solid #4d5a66;
+}
+.calc-slider_rule5__num {
+  position: relative;
+}
+.calc-slider_rule5__num:before {
+  content: "500";
+  font-size: 20px;
+  color: #373737;
+  display: inline-block;
+  position: absolute;
+  bottom: -27px;
+  left: -18px;
+}
+.calc-slider_rule6 {
+  float: left;
+  width: 101px;
+  height: 10px;
+  border-left: 1px solid #4d5a66;
+  border-right: 1px solid #4d5a66;
+}
+.calc-slider_rule6__num {
+  position: relative;
+}
+.calc-slider_rule6__num:before {
+  content: "1000";
+  font-size: 20px;
+  color: #373737;
+  display: inline-block;
+  position: absolute;
+  bottom: -27px;
+  left: -21px;
+}
+.calc-slider_rule6__num:after {
+  content: "2000";
+  font-size: 20px;
+  color: #373737;
+  display: inline-block;
+  position: absolute;
+  bottom: -27px;
+  right: -25px;
+}
+
+/*! jQuery UI - v1.11.4 - 2015-08-25
+* http://jqueryui.com
+* Includes: core.css, slider.css
+* Copyright 2015 jQuery Foundation and other contributors; Licensed MIT */
+/* Layout helpers
+----------------------------------*/
+.ui-helper-hidden {
+  display: none;
+}
+
+.ui-helper-hidden-accessible {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
+.ui-helper-reset {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  line-height: 1.3;
+  text-decoration: none;
+  font-size: 100%;
+  list-style: none;
+}
+
+.ui-helper-clearfix:before,
+.ui-helper-clearfix:after {
+  content: "";
+  display: table;
+  border-collapse: collapse;
+}
+
+.ui-helper-clearfix:after {
+  clear: both;
+}
+
+.ui-helper-clearfix {
+  min-height: 0;
+  /* support: IE7 */
+}
+
+.ui-helper-zfix {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  opacity: 0;
+  filter: Alpha(Opacity=0);
+  /* support: IE8 */
+}
+
+.ui-front {
+  z-index: 100;
+}
+
+/* Interaction Cues
+----------------------------------*/
+.ui-state-disabled {
+  cursor: default !important;
+}
+
+/* Icons
+----------------------------------*/
+/* states and images */
+.ui-icon {
+  display: block;
+  text-indent: -99999px;
+  overflow: hidden;
+  background-repeat: no-repeat;
+}
+
+/* Misc visuals
+----------------------------------*/
+.ui-widget-header {
+  background-color: #47535f;
+}
+
+.ui-widget-content {
+  background-color: #c5c5c5;
+}
+
+.ui-slider-horizontal {
+  height: 26px;
+}
+
+.ui-slider-horizontal .ui-slider-handle {
+  top: -5px;
+  margin-left: -18px;
+}
+
+.ui-slider .ui-slider-handle {
+  position: absolute;
+  z-index: 2;
+  cursor: default;
+  -ms-touch-action: none;
+  touch-action: none;
+  width: 36px;
+  height: 36px;
+  background: url("../image/calc-handle.png") no-repeat;
+}
+.ui-slider .ui-slider-handle:hover {
+  cursor: pointer;
+}
+
+/* Overlays */
+.ui-widget-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.ui-slider {
+  position: relative;
+  text-align: left;
+}
+
+.ui-slider .ui-slider-range {
+  position: absolute;
+  z-index: 1;
+  font-size: .7em;
+  display: block;
+  border: 0;
+  background-position: 0 0;
+}
+
+/* support: IE8 - See #6727 */
+.ui-slider.ui-state-disabled .ui-slider-handle,
+.ui-slider.ui-state-disabled .ui-slider-range {
+  filter: inherit;
+}
+
+.ui-slider-horizontal .ui-slider-range {
+  top: 0;
+  height: 100%;
+}
+
+.ui-slider-horizontal .ui-slider-range-min {
+  left: 0;
+}
+
+.ui-slider-horizontal .ui-slider-range-max {
+  right: 0;
+}
+
+.ui-slider-vertical {
+  width: .8em;
+  height: 100px;
+}
+
+.ui-slider-vertical .ui-slider-handle {
+  left: -.3em;
+  margin-left: 0;
+  margin-bottom: -.6em;
+}
+
+.ui-slider-vertical .ui-slider-range {
+  left: 0;
+  width: 100%;
+}
+
+.ui-slider-vertical .ui-slider-range-min {
+  bottom: 0;
+}
+
+.ui-slider-vertical .ui-slider-range-max {
+  top: 0;
+}
 
 .footer {
   background-color: #373737;
-  min-width: 1000px;
 }
 .footer_wrap {
-  display: inline-table;
+  display: inline-block;
   /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
   * zoom: 1;
   display: block;
@@ -932,7 +1438,7 @@ textarea:focus {
 }
 
 .social {
-  display: inline-table;
+  display: inline-block;
   /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
   * zoom: 1;
   display: block;
