--- a/sass/_mymix.scss
+++ b/sass/_mymix.scss
@@ -130,7 +130,7 @@
     line-height: 0;
     visibility: hidden;
   }
-  display: inline-table;
+  display: inline-block;
   /* Прячем стили от IE для mac \*/
   @include old-ie{
     * html & { height: 1%; }
