--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -92,6 +92,11 @@ textarea{
 @import "calc-tax";
 @import "calc-extra";
 @import "calc-slider";
+@import "calc-result";
+@import "main3";
+@import "action";
+@import "form-action";
+@import "main4";
 
 @import "footer";
 @import "gmap";
