--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -1,13 +1,48 @@
 .button{
 	display: block;
-	//text-align: center;
 	text-decoration: none;
 	font-size: $font_size18;
 	font-family: $bold;
 	@include link(#ffffff, #ffffff);
-	//text-indent: 100%;
-	//white-space: nowrap;
-	//overflow: hidden;
+	&__calcinfo{
+    font-size: 16px;
+    float: right;
+    width: 181px;
+    height: 33px;
+    padding: 15px 0px 0px 33px;
+    background-color: #3498db;
+    position: relative;
+    &:before{
+      content: " ";
+      display: block;
+      position: absolute;
+      left: 6px;
+      top: 12px;
+      width: 23px;
+      height: 23px;
+      background: url('../image/calc-buttons.png') -23px 0px no-repeat;
+    }
+  }
+  &__calcorder{
+    font-size: 16px;
+    float: right;
+    width: 158px;
+    height: 33px;
+    padding: 15px 0px 0px 56px;
+    background-color: #e74c3c;
+    margin: 0px 0px 0px 34px;
+    position: relative;
+    &:before{
+      content: " ";
+      display: block;
+      position: absolute;
+      left: 23px;
+      top: 11px;
+      width: 23px;
+      height: 23px;
+      background: url('../image/calc-buttons.png') -46px 0px no-repeat;
+    }
+  }
 	&__phone{
 		background-color: #e74c3c;
 		width: 167px;
